# openenv-onboarding

./: .gitattributes  .gitignore  Dockerfile  README.md  blog.md  inference.py  inference_local.py  onboarding_env.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py  train.py  training_notebook.ipynb
artifacts/: hf_blog_draft.md
server/: app.py
