[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-onboarding"
version = "1.0.0"
description = "Enterprise Employee Onboarding Agent Environment"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openenv-core",
    "pydantic>=2.0.0",
    "fastapi",
    "uvicorn"
]

[project.urls]
"Homepage" = "https://github.com/TheKshitij/openenv-onboarding"

[project.scripts]
server = "server.app:main"
